New Crowdin updates (#109)
* New translations en_us.json (Russian)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -1360,13 +1360,13 @@
   "LoverSuicide": "<color=#ff9ace>Lovers</color> умирают вместе",
   "NumberOfLovers": "Количество пар у <color=#ff9ace>Lovers</color> (x2 участника)",
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> знают роли друг друга",
-  "LegacyLovers": "Легаси Lovers",
+  "LegacyLovers": "Легаси <color=#ff9ace>Lovers</color>",
   "LovingImpostorSpawnChance": "Шанс на <color=#ff9ace>Loving</color> <#ff1919>Impostor</color>",
   "LIRoleForOtherImps": "Другие <#ff1919>Предатели</color> видят <#ff9ace>Loving</color> <#ff1919>Impostor</color> как",
   "PrivateChat": "У Lovers есть приватный чат <#ffff00>(ЭКСПЕРИМЕНТАЛЬНО)</color>",
   "GuessAbility": "''Lovers'' можно угадать",
   "Untouched": "Зависит от друг. настр.",
-  "GuessLovers": "Извините, <color=#ff9ace>Lovers</color> угадать нельзя",
+  "GuessLovers": "<color=#ff9ace>Lovers</color> нельзя угадать из-за настроек",
   "VanillaCrewmateCannotBeGuessed": "Ванильная роль Crewmate не может быть угадана",
   "GuessVanillaCrewmate": "Настройки игры не позволяют гадать ванильную роль Crewmate",
   "TrapperBlockMoveTime": "Время заморозки",
@@ -2154,14 +2154,14 @@
   "Temp.Blank": "",
   "TabGroup.VanillaSettings": "Ванильные Настройки",
   "TabGroup.PresetSettings": "Сохранения",
-  "TabGroup.SystemSettings": "Настройки Системы",
-  "TabGroup.GameSettings": "Настройки Игры",
-  "TabGroup.CrewmateRoles": "Роли Членов Экипажа",
-  "TabGroup.NeutralRoles": "Роли Нейтралов",
-  "TabGroup.ImpostorRoles": "Роли Предателей",
+  "TabGroup.SystemSettings": "Система",
+  "TabGroup.GameSettings": "Игра",
+  "TabGroup.CrewmateRoles": "Члены Экипажа",
+  "TabGroup.NeutralRoles": "Нейтралы",
+  "TabGroup.ImpostorRoles": "Предатели",
   "TabGroup.Addons": "Атрибуты",
   "TabGroup.OtherRoles": "Призраки",
-  "TabGroup.TaskSettings": "Модификации Игры",
+  "TabGroup.TaskSettings": "Модификаторы",
   "TabInfo.VanillaSettings": "Стандартные настройки игры",
   "TabInfo.PresetSettings": "Созданные тобой сохранения, которые ты можешь переключать в любое время",
   "TabInfo.SystemSettings": "Стандартные системные настройки мода",
@@ -2298,14 +2298,15 @@
   "ReportButtonText": "Репорт",
   "VentButtonText": "Вент",
   "SabotageButtonText": "Саботаж",
-  "AbilityButtonText.Shapeshifter": "Морф",
+  "AbilityButtonText.Crewmate": "Преследовать",
   "AbilityButtonText.Engineer": "Вент",
   "AbilityButtonText.Scientist": "Пульсы",
-  "AbilityButtonText.GuardianAngel": "Защитить",
-  "AbilityButtonText.Crewmate": "Преследовать",
-  "AbilityButtonText.Impostor": "Преследовать",
   "AbilityButtonText.Tracker": "Слежка",
   "AbilityButtonText.Noisemaker": "Преследовать",
+  "AbilityButtonText.GuardianAngel": "Защитить",
+  "AbilityButtonText.Impostor": "Преследовать",
+  "AbilityButtonText.Shapeshifter": "Морф",
+  "AbilityButtonText.Phantom": "Инвиз",
   "GauloisKillButtonText": "Скорость",
   "SniperSnipeButtonText": "Выстрел",
   "FireWorksExplosionButtonText": "Взорвать",
@@ -2813,7 +2814,7 @@
   "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Магазин</color>] Выбрано: {0} ({1})</size>",
   "Chemist": "Chemist",
   "ChemistInfo": "А что если смешать...",
-  "ChemistInfoLong": "(Нейтральный Убийца):\\nКак Chemist, вы можете смешивать разные материалы для создания газов и предметов. Каждая комната служит этакой лабораторией. В каждой лаборатории вы можете смешивать разные ингридиенты и получать разные вещи. Рано или поздно вы дойдёте до таких вещей:\\n-Кислота: вы можете отметить кого-нибудь. Когда этот игрок будет проходить мимо других игроков, он будет заражать их кислотой и через время они все умрут.\\n-Ослепляющий газ: прыгните в люк, чтобы ослепить всех, кроме вас.\\n-Порох: следующее ваше убийство заминирует труп. Все попытки других игроков зарепортить заминированный труп приведут к смерти.\\n-Граната: с помощью кнопки убийства вы можете отметить игрока. Через некоторое время он взорвётся, как и все, кто близко к нему.",
+  "ChemistInfoLong": "(Нейтральный Убийца):\\nКак Chemist, ты можешь смешивать разные материалы для создания газов и предметов. Каждая комната служит этакой лабораторией. В каждой лаборатории ты можешь смешивать разные ингридиенты и получать другие. Рано или поздно ты дойдёшь до таких вещей как:\\n-Кислота: ты можешь отметить кого-нибудь. Когда этот игрок будет проходить мимо других игроков, они будут заражены кислотой и через некоторое время все умрут.\\n-Ослепляющий газ: прыгни в люк, чтобы ослепить всех, кроме самого себя.\\n-Порох: следующее твоё убийство заминирует труп. Все попытки других игроков зарепортить заминированный труп приведут к их смерти.\\n-Граната: с помощью кнопки убийства ты можешь отметить игрока. Через некоторое время он взорвётся, как и все, кто близко к нему.",
   "Chemist.Item.Air": "Воздух",
   "Chemist.Item.BaseMineralOil": "Минеральное топливо",
   "Chemist.Item.Coal": "Уголь",
@@ -2852,7 +2853,7 @@
   "ForSpecifiedTime": "На указанное время",
   "SchrodingersCat": "Schrödinger's Cat",
   "SchrodingersCatInfo": "Перейди в команду атакующего тебя",
-  "SchrodingersCatInfoLong": "(Пассивный Нейтрал):\\nКак Schrödinger's Cat, вы получаете роль того игрока, который попытается вас убить.\\nЕсли вас не попытаются атаковать, то вы либо проиграете, либо выиграете с членами экипажа (зависит от настроек).",
+  "SchrodingersCatInfoLong": "(Пассивный Нейтрал):\\nКак Schrödinger's Cat, ты получишь роль того игрока, который попытается тебя убить (если тебя попытается убить предатель, ты превратишься в <b><#ff1919>Renegade</color></b>.\\nЕсли тебя не попытаются атаковать, то ты либо проиграешь, либо выиграешь с членами экипажа (зависит от настроек).",
   "SchrodingersCat.WinsWithCrewIfNotAttacked": "Побеждает с <color=#8cffff>Членами Экипажа</color>, если не будет атакован",
   "SchrodingersCat.Notify.KillerRecruited": "Вы рекрутировали {1}! {0} теперь имеет такую же роль, как и вы.",
   "SchrodingersCat.Notify.RecruitedByKiller": "Вас рекрутировал {1}! Теперь у вас такая же роль, как и у {0}.",
@@ -2875,7 +2876,7 @@
   "ConvenerInfoLong": "(Член Экипажа):\\nConvener может прыгнуть в люк/погладить питомца, чтобы телепортировать абсолютно всех игроков к себе.",
   "Mathematician": "Mathematician",
   "MathematicianInfo": "Задавай математические вопросы",
-  "MathematicianInfoLong": "(Член Экипажа):\\nКак Mathematician, вы можете написать команду \"/ask [число] [число]\" чтобы задать вопрос: \"Сколько будет [число] + [число]. Первый, кто правильно ответит на вопрос и отправит правильное число в чат, получит щит на следующий раунд. За одно собрание можно задать только 1 вопрос.",
+  "MathematicianInfoLong": "(Член Экипажа):\\nКак Mathematician, ты можешь написать команду <b>/ask [число] [число]</b>, чтобы задать вопрос: \"Сколько будет [число] + [число]. Первый, кто правильно ответит на вопрос и отправит правильное число в чат, получит щит на следующий раунд. За одно собрание можно задать только 1 вопрос.",
   "MathematicianQuestionString": "Сколько будет <b>{0} + {1}</b>?",
   "MathematicianAnsweredString": "<b>{0}</b> ответил правильно! ({1})\nУ него есть щит на следующий раунд.",
   "Escort": "Escort",
@@ -2922,7 +2923,7 @@
   "DonutDeliverCD": "Откат доставки",
   "Chronomancer": "Chronomancer",
   "ChronomancerInfo": "Убивай без отката с зарядом!",
-  "ChronomancerInfoLong": "(Предатель):\\nКак Chronomancer, когда ваша перезарядка убийства откатится, кнопка убийства начнёт заряжаться (вы увидите процент заряженности под своим никнеймом). В зависимости от того, насколько вы зарядили свою кнопку убийства, ваш откат убийства будет составлять 0 секунд до тех пор, пока заряд не закончится (проценты под никнеймом пойдут вниз). Заряд начинает использоваться после первого убийства с зарядом. Когда заряд закончится, кнопка убийства откатится до установленного в настройках значения.",
+  "ChronomancerInfoLong": "(Предатель):\\nКак Chronomancer, когда твоя перезарядка убийства откатится, кнопка убийства начнёт заряжаться (ты увидишь процент заряженности под своим никнеймом). В зависимости от того, насколько ты зарядил свою кнопку убийства, твой откат убийства будет составлять 0 секунд до тех пор, пока заряд не закончится (проценты под никнеймом пойдут вниз, когда ты убьёшь). Заряд начинает использоваться после первого убийства с зарядом. Когда заряд закончится, кнопка убийства откатится.",
   "ChronomancerPercent": "<color=#00ffa5>Заряд:</color> <b>{0}</b>%",
   "ChargeInterval": "Когда убийство откатилось, каждую секунд даётся заряда",
   "ChargeLossInterval": "Когда заряд используются, каждую секунду он убавляется на",
@@ -3015,10 +3016,10 @@
   "PlagueDoctorCanInfectVent": "Может заразить, находясь в люке",
   "LovingCrewmate": "Lover",
   "LovingCrewmateInfo": "Выживите и победите вместе!",
-  "LovingCrewmateInfoLong": "(Член Экипажа):\\nКак Lover, вы, кроме команды членов экипажа, также находитесь в команде со своим Lover'ом.\\nВаш Lover может быть как членом экипажа (с ролью Lover), так и предателем (с ролью Loving Impostor). Шанс на появление в паре Loving Impostor зависит от настроек.\\n\\nВы выиграете с членами экипажа, если к моменту победы членов экипажа кроме вас будет жив ещё один член экипажа/только вы будете живы\\nВы выиграете вдвоём со своим Lover'ом, если к моменту конца игры вы останетесь единственными выжившими\\nВы выиграете с предателями, если вашим партнёром был Loving Impostor и к моменту окончания игры были живы вы, Loving Impostor и ещё один предатель\\n\\nВ зависимсти от настроек, у Lovers будет приватный чат во время игры, который появится после первого собрания. Также, в зависимости от настроек, если кто-то из Lovers умрёт, то мгновенно умрёт и второй.\\n\\nЭта роль может появиться только если включена Легаси версия Lovers.",
+  "LovingCrewmateInfoLong": "(Член Экипажа):\\nКак Lover, ты, кроме команды членов экипажа, также находишься в команде со своим Lover'ом.\\nТвой Lover может быть как членом экипажа (с ролью Lover), так и предателем (с ролью Loving Impostor). Шанс на появление в паре Loving Impostor зависит от настроек.\\n\\nТы выиграешь с членами экипажа, если к моменту победы членов экипажа кроме вас будет жив ещё один член экипажа/только вы будете живы/в паре нет Loving Impostor'а\\nВы выиграете вместе со своим Lover'ом в одиночку, если к моменту конца игры вы останетесь единственными выжившими и в паре есть Loving Impostor\\nВы выиграете с предателями, если вашим партнёром был Loving Impostor'ом и к моменту окончания игры были живы ты, Loving Impostor и ещё один предатель\\n\\nВ зависимсти от настроек, у Lovers будет приватный чат во время игры, который появится после первого собрания (Экспериментальная функция). Также, в зависимости от настроек, если кто-то из Lovers умрёт, то мгновенно умрёт и второй.\\n\\nЭта роль может появиться только если включена Легаси версия Lovers.",
   "LovingImpostor": "Loving Impostor",
   "LovingImpostorInfo": "Убивай, саботируй, выживи и выиграй вместе со своим партнёром!",
-  "LovingImpostorInfoLong": "(Предатель):\\nКак Loving Impostor, вы, кроме команды предателей, также находитесь в команде со своим Lover'ом!\\nВаш Lover - всегда член экипажа.\\n\\nВы и ваш Lover победите с предателями, если доживёте до конца вместе\\nВы победите со своим Lover'ом в одиночку, если к моменту вашей победы все остальные предатели будут мертвы\\nВы победите с предателями без своего Lover'а, если к моменту победы предателей ваш Lover будет мёртв\\n\\nВ зависимсти от настроек, у Lovers будет приватный чат во время игры, который появится после первого собрания. Также, в зависимости от настроек, если кто-то из Lovers умрёт, то мгновенно умрёт и второй.\\n\\nЭта роль может появиться только если включена Легаси версия Lovers.",
+  "LovingImpostorInfoLong": "(Предатель):\\nКак Loving Impostor, ты, кроме команды предателей, также находишься в команде со своим Lover'ом!\\nТвой Lover - всегда член экипажа.\\n\\nТы и твой Lover победите с предателями, если доживёте до конца вместе и предатели победят\\nТы победишь со своим Lover'ом в одиночку, если к моменту вашей победы все остальные предатели будут мертвы и вы останетесь единственными выжившими\\nТы победишь с предателями без своего Lover'а, если к моменту победы предателей твой Lover будет мёртв\\n\\nВ зависимсти от настроек, у Lovers будет приватный чат во время игры, который появится после первого собрания (Экспериментальная функция). Также, в зависимости от настроек, если кто-то из Lovers умрёт, то мгновенно умрёт и второй.\\n\\nЭта роль может появиться только если включена Легаси версия Lovers.",
   "Enderman": "Enderman",
   "EndermanInfo": "Телепортируйся туда и обратно",
   "EndermanInfoLong": "(Нейтральный Убийца):\\nEnderman может попытаться саботировать (саботаж не произойдёт)/погладить питомца, чтобы отметить какую-то точку. Он телепортируется обратно в эту точку после определённого количества времени.",
@@ -3040,7 +3041,7 @@
   "BubbleDiesIfInRange": "Bubble умирает, находясь в радиусе взрыва",
   "Hookshot": "Hookshot",
   "HookshotInfo": "Притягивайте игроков или притягивайтесь к ним сами",
-  "HookshotInfoLong": "(Нейтральный Убийца):\\nКак Hookshot, вы можете отметить определённого игрока кнопкой убийства.\\nВы можете прыгнуть в люк, чтобы изменять два режима убийства: телепортировать цель к вам и убить/телепортировать вас к цели и убить цель\\nЧтобы убить с применением выбранного режима, нужно попытаться саботировать (саботаж не произойдёт)/погладить питомца.\\n\\nHookshot может убивать и обычным способом:\\nОдно нажатие - метка\\nДвойное нажатие - обычное убийство",
+  "HookshotInfoLong": "(Нейтральный Убийца):\\nКак Hookshot, ты можешь отметить определённого игрока кнопкой убийства.\\nТы можешь прыгнуть в люк, чтобы изменять два режима убийства: телепортировать цель к себе и убить/телепортировать себя к цели и убить цель\\nЧтобы убить с применением выбранного режима, нужно попытаться саботировать (саботаж не произойдёт)/погладить питомца.\\n\\nHookshot может убивать и обычным способом:\\nОдно нажатие - метка\\nДвойное нажатие - обычное убийство",
   "HookshotTpToTarget": "Телепорт к цели",
   "HookshotPullTarget": "Телепорт цели к вам",
   "Sprayer": "Sprayer",
@@ -3861,7 +3862,7 @@
   "RouleteGrandeur": "Roulette Grandeur",
   "RouleteGrandeurInfo": "Сыграй в Русскую Рулетку",
   "RouleteGrandeurInfoLong": "(Нейтральный Убийца):\\nКак Roulette Grandeur, ты можешь сыграть в Русскую Рулетку, чтобы уменьшить свой откат убийства после следующего убийства. Прыгни в люк, чтобы изменить количество пуль (изменить риск). Всего 5 слотов. Попытайся саботировать (саботаж не произойдёт)/погладь питомца, чтобы выстрелить. Если ты попадёшься на пулю, то умрёшь. Если же нет - твой откат будет перманентно снижен на определённое значение (чем больший был риск - тем меньше станет откат убийства).",
-  "RG.KCDReduction": "За каждую пулю откат уменьшается на",
+  "KCDReduction": "За каждую пулю откат уменьшается на",
   "RG.Hit": "<#ffff00>Похоже, тебе не повезло...</color>",
   "RG.NoHit": "<#00ffa5>А ты счастливчик! Заряжено было {0} пуль(-я).\\nТвой откат убийства был уменьшен на <#8cffff>{1}с</color>!</color>",
   "RG.Suffix": "<#00ffa5>Пуль:</color> <b>{0}</b>",
