Remove many unused strings, improve /combo example
NiceguEsser!

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -210,7 +210,6 @@
   "Bloodhound": "Coroner",
   "Scout": "Scout",
   "Merchant": "Merchant",
-  "Retributionist": "Retributionist",
   "Deputy": "Deputy",
   "Guardian": "Guardian",
   "Addict": "Addict",
@@ -219,7 +218,6 @@
   "Spiritualist": "Spiritualist",
   "Chameleon": "Chameleon",
   "ParityCop": "Inspector",
-  "Admirer": "Admirer",
   "TimeMaster": "Time Master",
   "Crusader": "Crusader",
   "Reverie": "Reverie",
@@ -264,17 +262,12 @@
   "Pickpocket": "Pickpocket",
   "Traitor": "Traitor",
   "Vulture": "Vulture",
-  "Medusa": "Medusa",
-  "Baker": "Baker",
-  "Famine": "Famine",
   "Spiritcaller": "Spiritcaller",
   "Amnesiac": "Amnesiac",
-  "Masochist": "Masochist",
   "Doomsayer": "Doomsayer",
   "LastImpostor": "Last Impostor",
   "Lovers": "Lovers",
   "Madmate": "Madmate",
-  "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "AntiTP": "Anti-TP",
@@ -329,12 +322,10 @@
   "Loyal": "Loyal",
   "EvilSpirit": "Evil Spirit",
   "Recruit": "Recruit",
-  "Admired": "Admired",
   "Glow": "Glow",
   "Diseased": "Diseased",
   "Antidote": "Antidote",
   "Swift": "Swift",
-  "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.AntiTP": "Anti-TP",
@@ -614,7 +605,6 @@
   "LoyalInfo": "You cannot be recruited",
   "EvilSpiritInfo": "You are an evil Spirit",
   "RecruitInfo": "Help the Jackal",
-  "AdmiredInfo": "The Admirer chose you as their love",
   "GlowInfo": "You glow in the dark",
   "DiseasedInfo": "Increase your killer's cooldown",
   "AntidoteInfo": "Decrease your killer's cooldown",
@@ -737,7 +727,6 @@
   "BloodhoundInfoLong": "(Crewmates):\\nAs a Coroner you can't report corpses, instead after trying to report the corpse you will see an arrow leading you to the killer. If a meeting is called, the arrows disappear. Depending on the setting, the body you found cannot be reported.",
   "ScoutInfoLong": "(Crewmates):\\nAs a Scout, you can vote for a player in the meeting, which will mark their position for you in the game with arrows. In addition, at the beginning of a meeting you will be shown in which room the player was last, if the option is activated.",
   "MerchantInfoLong": "(Crewmates):\\As a merchant, you sell a random add-on to a random player for each task you complete. Each add-on sold earns you money. If you have a certain amount of money, you can avert the next killing attempt against you by bribing the murderer. The bribed player won't be able to kill you, but you don't know who it is. The bribe money used is lost and is not available for additional bribes.",
-  "RetributionistInfoLong": "(Crewmates):\\nAs the Retributionist, you can kill a limited amount of players after your death.\\n\\nUse /ret [playerID] to kill.",
   "DeputyInfoLong": "(Crewmates):\\nAs the Deputy, use your kill button on a player to reset their kill cooldown.\\n\\nIf the target does not have a kill button, then the handcuff was a waste.",
   "GuardianInfoLong": "(Crewmates):\\nAs the Guardian, you become immortal on task completion.\\nYou can be guessed in meetings though.",
   "AddictInfoLong": "(Crewmates):\\nThe Addict has a suicide timer indicated by the vent cooldown. If the timer expires, the Addict dies. After venting, the Addict is immortal for a certain time. The Addict is also frozen for a defined time after freezing and cannot report any bodies.",
@@ -746,7 +735,6 @@
   "SpiritualistInfoLong": "(Crewmates):\\nAs the Spiritualist, you will get an arrow pointing to the ghost of the body that was reported in the last meeting.\\n\\nIf the player was good, it may lead you to an Impostor or neutral killer.\\nIf the player was bad, it may just lead you to a fellow crewmate.",
   "ChameleonInfoLong": "(Crewmates):\\nAs the Chameleon, you can vent to disguise (invisible).\\nWhile disguising, nobody can interact with you.\\nVenting while disguised will reveal yourself.",
   "ParityCopInfoLong": "(Crewmates):\\nTo check if two players are in the same team, use the command /cp [player id 1] [player id 2]. Neutrals and converted players are counted as part of the same team. The Trickster is counted as crew and Rascal is counted as Impostor. You will receive an affirmation message if they are in the same team, or a denial message if they are not.",
-  "AdmirerInfoLong": "(Crewmates):\\nAs the Admirer, admire a player to make them crewmate aligned.\\nThey'll win with crewmates and not their original team.\\n\\nYou can only do this once.",
   "TimeMasterInfoLong": "(Crewmates):\\nAs the Time Master, use the vents/pet your pet to mark everyone's position.\\nWhen using the ability again, every alive player will be teleported back to the marked positions.\\n\\nDuring the ability duration, the Time Master gains a time shield, which protects them from death.",
   "CrusaderInfoLong": "(Crewmates):\\nAs the Crusader, use your kill button to crusade a player.\\nIf that player gets attacked, you'll kill the attacker.",
   "ReverieInfoLong": "(Crewmates):\\nAs the Reverie, you can kill but your cooldown starts very high.\\n\\nIt lowers with each kill you make.\\n\\nYou win with other crewmates.",
@@ -792,16 +780,12 @@
   "TraitorInfoLong": "(Neutrals):\\nAs the Traitor, you were an Impostor that betrayed the Impostors.\\nYou know the Impostors but they don't know you.\\nThe twist? They can kill you but you can't kill them.\\n\\nEliminate the Impostors by other means, then kill everyone else to win!",
   "VultureInfoLong": "(Neutrals):\\nAs the Vulture, report bodies to win!\\n\\nWhen you report a body, if your eat cooldown is up, you'll eat the body (makes it unreportable).\\nIf your eat ability is still on cooldown, then you'll report the body normally.\\n\\nAdditionally, you'll report bodies normally if the maximum bodies eaten per round is reached.",
   "MedusaInfoLong": "(Neutrals):\\nAs the Medusa, you can stone bodies much like cleaning a body when your kill cooldown is up.\\nStoned bodies cannot be reported.\\n\\nKill everyone to win.",
-  "BakerInfoLong": "(Neutrals):\\nAs the Baker, you give out bread.\\nAt the beginning of each meeting, messages will be given out.\\n\\nIf you finish your tasks, you become Famine when a meeting is called.",
-  "FamineInfoLong": "(Neutrals):\\nAs the Famine, you give out poisoned bread.\\nPlayers with poisoned bread die at the end of the meeting if the Famine is not exiled.\\n\\nIf the Famine is alive at the end of the game, they steal the win.",
   "SpiritcallerInfoLong": "(Neutrals):\\nAs the Spiritcaller, your victims become Evil Spirits after they die. These spirits can help you win by freezing other players for a short time and/or blocking their vision. Alternatively, the spirits can give you a shield that protects you briefly from an attempted kill.",
   "AmnesiacInfoLong": "(Neutrals):\\nAs the Amnesiac, use your kill button on a player to remember their role.\\n\\nIf the target was an Impostor, you'll become a <b><color=#ff1919>Renegade</color></b>.\\nIf the target was a crewmate, you'll become a <b><color=#FFB347>Sheriff</color></b>.\\nIf the target was a passive neutral or a neutral killer not specified, you'll become the role defined in the settings.\\nIf the target was a neutral killer of a select few, you'll become the role they are.",
-  "MasochistInfoLong": "(Neutrals):\\nAs the Masochist, your goal is to get attacked a few times to win.\\n\\nYou cannot be guessed, as that adds to your attack count.",
   "DoomsayerInfoLong": "(Neutrals):\\nThe Doomsayer can guess the role of a certain player during the meeting.\\nIf the Doomsayer guesses a certain number of roles (the number depends on the host settings) then he wins.\\nThe guessing command is: /bt [player id] [role]\\nYou can see the player's id before the player's name, or use the /id command to view the id of all players.",
   "LastImpostorInfoLong": "(Add-ons):\\nLast Impostor gets reduced kill cooldown.",
   "LoversInfoLong": "(Add-ons),\\nLovers win together and may die together if one is exiled or killed. They can see the ♥ mark next to each other's name. If one of the lovers win at the end, the other wins too.",
   "MadmateInfoLong": "(Add-ons):\\nMadmates assist the Impostors in winning the game. They are only available to Crewmates but can identify Impostors depending on the host's settings. Certain roles like Sheriff, Snitch, and Mayor can become Madmates. The abilities of some roles change when they become Madmates. For example, the Grenadier's flash bomb works on Crewmates and Neutrals instead of Impostors. The Judge can judge anyone.",
-  "NtrInfoLong": "(Add-ons):\\nWhen there is Neptune, all players will see that they are Lovers with Neptune, and they will not die in love together and will not change the win conditions. Note: Lovers won't become Neptune, and Neptune won't become Lovers.",
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
@@ -853,7 +837,6 @@
   "LoyalInfoLong": "(Add-ons):\\nAs the Loyal, you cannot be recruited by roles such as Jackal or Cultist.\\n\\nCannot be assigned to neutrals.",
   "EvilSpiritInfoLong": "(Add-ons):\\nAs Evil Spirit, it's your job to help the Spiritcaller to victory. You can use your Haunt button to freeze players and reduce their vision. Alternatively, you can use your Haunt button to temporarily give the Spiritcaller a shield against a kill attempt.",
   "RecruitInfoLong": "(Betrayal Add-ons):\\nAs a recruit, you are on the Jackal's team and help out the Jackal and their Sidekicks.\\n\\nYou cannot win with your original team.",
-  "AdmiredInfoLong": "(Betrayal Add-ons):\\nAs an admired player, you win with the crew and not your original team.\\n\\nYou can see the Admirer.",
   "GlowInfoLong": "(Add-ons):\\nAs the Glow, your name is colored during a lights sabotage.",
   "DiseasedInfoLong": "(Add-ons):\\nWhen someone tries to use kill button on you, their cooldown will be increased by a configurable amount of time",
   "AntidoteInfoLong": "(Add-ons):\\nWhen someone tries to use kill button on you, their cooldown will be decreased by a configurable amount of time",
@@ -1137,7 +1120,6 @@
   "ShowNKRemainOnEject": "Show remaining <color=#ffab1b>Neutral Killers</color> on ejects",
   "ConfirmEgoistOnEject": "Confirm <color=#5600ff>Egoists</color> on ejection",
   "ConfirmLoversOnEject": "Confirm <color=#ff9ace>Lovers</color> on ejection",
-  "HideBittenRolesOnEject": "Hide roles of <color=#7b8968>bitten<color> players on ejection",
   "ShowTeamNextToRoleNameOnEject": "Show what team the ejected player's role is on",
   "Addon": "Add-on",
   "Ban": "Ban",
@@ -2121,7 +2103,7 @@
   "ComboRemove": "{0} and {1} will no longer spawn together.",
   "ComboBan": "{0} and {1} will never spawn together.",
   "ComboAllow": "{0} and {1} can now spawn together.",
-  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo {add/ban/remove/allow} {main role} {addon} [all]\n\n<size=60%>By default, the combo is added to the current preset. If you want it to be added for all presets, type 'all' at the end.\nExample: /combo add Sheriff Sidekick all</size>",
+  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo {add/ban/remove/allow} {main role} {addon} [all]\n\n<size=60%>By default, the combo is added to the current preset. If you want it to be added for all presets, type 'all' at the end.\nExample: /combo add Niceguesser Doubleshot all</size>",
   "ERR-000-000-0": "No Error",
   "ERR-000-900-0": "Test Error Lv.0",
   "ERR-000-910-1": "Test Error Lv.1",
@@ -2686,7 +2668,6 @@
   "FFFCanKillEgoist": "Can Kill Egoist",
   "FFFCanKillInfected": "Can Kill Infected Players",
   "FFFCanKillContagious": "Can Kill Contagious Players",
-  "FFFCanKillAdmired": "Can Kill Admired Players",
   "FFFCanKillUndead": "Can Kill Undead Players",
   "Mafioso": "Mafioso",
   "MafiosoInfo": "With Each Tier, you're more Powerful",
@@ -3961,11 +3942,6 @@
   "Prefix.Haunter": "Haunter",
   "GotGhostRoleNotify": "<#ffff00>You were assigned a ghost role!</color>",
   "NumOfTasks": "Number of Tasks to Finish",
-  "MasochistKillMax": "Amount of attacks needed to win",
-  "GuessMasochist": "You just tried to guess a Masochist!\\nThey're now one step closer to winning!\\n\\nDo not guess them again.",
-  "MasochistKill": "You were attacked!",
-  "SelfGuessMasochist": "You can't self guess as a Masochist, you cheater!",
-  "GuessMasochistBlocked": "Masochist cannot guess due to self guessing.",
   "RememberCooldown": "Remember Cooldown",
   "RefugeeKillCD": "<color=#ff1919>Renegade</color>'s Kill Cooldown",
   "AmnesiacRemembered": "An Amnesiac remembered your role!",
@@ -3982,22 +3958,6 @@
   "RememberButtonText": "Remember",
   "IncompatibleNeutralMode": "If neutral is incompatible, turn into",
   "IncompatibleCrewmateMode": "If crewmate is incompatible, turn into",
-  "RetributionistDeadMsg": "The death of the Retributionist means the beginning of retribution. \\nPlease use /ret + [player ID] to kill the specified player \\nYou can see player IDs in front of their names. \\nOr type /ret to get a list of player IDs",
-  "RetributionistAliveKill": "Retribution for the Retributionist may only begin after their death.",
-  "RetributionistKillMax": "You've reached the maximum amount of kills, you can't kill anymore!",
-  "RetributionistKillDead": "Choose a living player to kill.",
-  "RetributionistKillSucceed": "<b>{0}</b> was killed by the Retributionist!",
-  "RetributionistKillDisable": "You can't retribute until your tasks are done.",
-  "CanOnlyRetributeWithTasksDone": "Can only retribute on task completion",
-  "RetributionistCanKillNum": "Max retributions",
-  "RetributionistKillTooManyDead": "Too many players are dead, you can't retribute.",
-  "MinimumPlayersAliveToRetri": "Maximum players needed to block retributions",
-  "BakerChangeChances": "Chance that <color=#b58428>Baker</color> turns into <color=#cb4d4d>Famine</color>",
-  "BakerChange": "The Baker has turned into Famine!\\nThe bread is now poisoned.\\nIf the Famine is not exiled, all players with poisoned bread die.",
-  "BakerChangeNow": "A player has poisoned bread!\\nExile the Famine or that player dies.",
-  "BakerChangeNONE": "The Famine has not given out poisoned bread.\\nNobody will die of poison, but you should still exile the Famine.",
-  "PanAliveMessageTitle": "[ Baker Message ]",
-  "PanAlive": "The Baker has given out bread.",
   "ImmuneToAttacksWhenTasksDone": "Immune to attacks on task completion",
   "OptionWatcher": "Can sell Watcher",
   "OptionKnighted": "Can sell Knighted",
@@ -4224,13 +4184,6 @@
   "CursedSoulInvalidTarget": "No soul found",
   "Soulless-": "Soulless ",
   "SoullessWinsWithCS": "Soulless Players Win With the Cursed Soul",
-  "AdmireCooldown": "Admire Cooldown",
-  "AdmirerKnowTargetRole": "Know the roles of <color=#ee43c3>Admired</color> players",
-  "AdmireButtonText": "Admire",
-  "AdmirerAdmired": "The Admirer admired you!",
-  "AdmiredPlayer": "Player admired",
-  "AdmirerInvalidTarget": "Target cannot be admired",
-  "Admired-": "Admired ",
   "SpiritualistNoticeTitle": "[ ★ Spiritualist Connection ★ ]",
   "SpiritualistNoticeMessage": "The Spiritualist has an arrow pointing to you!\\nYou can use them to a killer or frame a crewmate",
   "SpiritualistShowGhostArrowForSeconds": "Ghost arrow duration",
@@ -4362,11 +4315,9 @@
   "WinnerRoleText.Traitor": "Traitor Wins!",
   "WinnerRoleText.Vulture": "Vulture Wins!",
   "WinnerRoleText.Medusa": "Medusa Wins!",
-  "WinnerRoleText.Famine": "Famine Wins!",
   "WinnerRoleText.Spiritcaller": "Spiritcaller Wins!",
   "WinnerRoleText.Glitch": "The Glitch Wins!",
   "WinnerRoleText.PlagueBearer": "Plaguebearer Wins!",
-  "WinnerRoleText.Masochist": "Masochist Wins!",
   "WinnerRoleText.Doomsayer": "Doomsayer Wins!",
   "WinnerRoleText.Werewolf": "Werewolf Wins!",
   "WinnerRoleText.HeadHunter": "Head Hunter Wins!",
