You didn't see anything, ok?
^^

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -262,6 +262,7 @@
   "Pickpocket": "Pickpocket",
   "Traitor": "Traitor",
   "Vulture": "Vulture",
+  "Medusa": "Medusa",
   "Spiritcaller": "Spiritcaller",
   "Amnesiac": "Amnesiac",
   "Doomsayer": "Doomsayer",
