massive fixes, AFK detection, cooler ID showing in meetings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1143,6 +1143,7 @@
   "MenuTitle.Guessers": "★ Guesser Mode ★",
   "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
   "MenuTitle.CTA": "★ Custom Team Assignment ★",
+  "MenuTitle.AFKDetection": "★ AFK Detection ★",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickKnowOtherSidekickRole": "<color=#00b4eb>Sidekicks</color> know the roles of other <color=#00b4eb>Sidekicks</color>",
@@ -1639,6 +1640,7 @@
   "DoppelgangerWarning": "<#ffff00>The Doppelganger swapped skins with you!</color>",
   "CheckMurderFail": "<#ff0000>The murder was canceled due to the following reason:\\n</color>",
   "SameCTATeam": "The player you attacked is in the same custom team as you",
+  "AFKShielded": "According to the Host's settings, AFK players cannot be killed",
   "JackalSidekick": "This Jackal/Sidekick/Recruit interaction is not allowed",
   "ContagiousPlayers": "Contagious players cannot kill each other",
   "MadmateKillImpostor": "Madmates cannot kill Impostors",
@@ -1680,6 +1682,14 @@
   "KickCommandKicked": "was kicked from the game.",
   "KickCommandKickedRole": "Their role was",
   "ModeratorTag": "<#8000ff>Moderator</color>",
+  "EnableAFKDetector": "Enable AFK Detector",
+  "AFKWarning": "<#ffff00>Please move to avoid being marked as AFK</color> <#ffffff>({0})</color>",
+  "AFKSuffix": "<#ffa500>(AFK)</color>",
+  "AFKConsequence": "Consequence for AFK players",
+  "AFKConsequence.Nothing": "Nothing",
+  "AFKConsequence.Shield": "Shield",
+  "AFKConsequence.Suicide": "Suicide",
+  "AFKConsequence.Kick": "Kick",
   "DeathReason.Kill": "Kill",
   "DeathReason.Vote": "Ejected",
   "DeathReason.Suicide": "Suicide",
@@ -1697,6 +1707,7 @@
   "DeathReason.Execution": "Executed",
   "DeathReason.Disconnected": "Disconnected",
   "DeathReason.Fall": "Fall",
+  "DeathReason.AFK": "AFK",
   "DeathReason.Revenge": "Revenge",
   "DeathReason.Eaten": "Eaten",
   "DeathReason.Sacrifice": "Victim",
@@ -2226,27 +2237,27 @@
   "RoleRateNoColor": "Random",
   "RoleOnNoColor": "Always",
   "RoleOffNoColor": "Disabled",
-  "Rate0": "<#444444>0%</color>",
-  "Rate5": "<#808F8F>5%</color>",
-  "Rate10": "<#799595>10%</color>",
-  "Rate15": "<#719C9C>15%</color>",
-  "Rate20": "<#6AA2A2>20%</color>",
-  "Rate25": "<#62A9A9>25%</color>",
-  "Rate30": "<#5BB0B0>30%</color>",
-  "Rate35": "<#53B6B6>35%</color>",
-  "Rate40": "<#4CBDBD>40%</color>",
-  "Rate45": "<#44C4C4>45%</color>",
-  "Rate50": "<#3CCACA>50%</color>",
-  "Rate55": "<#35D1D1>55%</color>",
-  "Rate60": "<#2DD7D7>60%</color>",
-  "Rate65": "<#26DEDE>65%</color>",
-  "Rate70": "<#1EE5E5>70%</color>",
-  "Rate75": "<#17EBEB>75%</color>",
-  "Rate80": "<#0FF2F2>80%</color>",
-  "Rate85": "<#08F8F8>85%</color>",
-  "Rate90": "<#07F9F9>90%</color>",
-  "Rate95": "<#00FFFF>95%</color>",
-  "Rate100": "<#00FFA5>100%</color>",
+  "Rate0": "<#440000>0%</color>",
+  "Rate5": "<#00ffff>5%</color>",
+  "Rate10": "<#00fffb>10%</color>",
+  "Rate15": "<#00fff8>15%</color>",
+  "Rate20": "<#00fff4>20%</color>",
+  "Rate25": "<#00fff0>25%</color>",
+  "Rate30": "<#00ffec>30%</color>",
+  "Rate35": "<#00ffe7>35%</color>",
+  "Rate40": "<#00ffe3>40%</color>",
+  "Rate45": "<#00ffde>45%</color>",
+  "Rate50": "<#00ffd9>50%</color>",
+  "Rate55": "<#00ffd4>55%</color>",
+  "Rate60": "<#00ffcf>60%</color>",
+  "Rate65": "<#00ffc9>65%</color>",
+  "Rate70": "<#00ffc4>70%</color>",
+  "Rate75": "<#00ffbe>75%</color>",
+  "Rate80": "<#00ffb8>80%</color>",
+  "Rate85": "<#00ffb2>85%</color>",
+  "Rate90": "<#00ffac>90%</color>",
+  "Rate95": "<#00ffa6>95%</color>",
+  "Rate100": "<#ffff44>100%</color>",
   "Preset": "Preset",
   "Preset_1": "Preset 1",
   "Preset_2": "Preset 2",
@@ -2395,6 +2406,8 @@
   "KickXboxPlayer": "<b>{0}</b> was kicked due to playing on Xbox.",
   "KickPlayStationPlayer": "<b>{0}</b> was kicked due to playing on PlayStation.",
   "KickNintendoPlayer": "<b>{0}</b> was kicked due to playing on Nintendo Switch.",
+  "AFKKick": "{0} was kicked because they went AFK",
+  "AFKTooMany": "AFK detection was disabled for this round since there are too many AFK players",
   "KBDisplayScore": "Rank: {0} Kills: {1}",
   "KBTimeRemain": "<color=#00ffa5>Time Remaining:</color> <b>{0}</b>s",
   "ResetDoorsEveryTurns": "Reset All Doors After Meetings",
@@ -2547,6 +2560,7 @@
   "pet_UFO": "UFO",
   "pet_D2WormPet": "Worm",
   "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Random</color>",
+  "PlayerExemptedFromAFK": "{0} was exempted from AFK detection for 1 game",
   "Swapster": "Swapster",
   "SwapsterInfo": "Swap Players",
   "SwapsterInfoLong": "(Impostors):\\nAs the Swapster, you can select 2 players using your shapeshift menu to swap them.",
