--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2101,6 +2101,90 @@
   "Warning.AutoExitAtMismatchedVersion": "The host has no or a different version of {0}\\nYou will be kicked in {1}",
   "Warning.OneMinuteLeft": "<#ffff00>The lobby will close in 1 minute!</color>",
   "Commands.NoAccess": "You don't have access to this command",
+  "CommandDescription.LT": "View the lobby timer",
+  "CommandDescription.Dump": "Dumps the log file to the desktop",
+  "CommandDescription.Version": "View the current version of EHR",
+  "CommandDescription.ChangeSetting": "Change the game settings",
+  "CommandDescription.Winner": "View the winners of the last game",
+  "CommandDescription.LastResult": "View the roles of players in the last game",
+  "CommandDescription.Rename": "Gives you a new name",
+  "CommandDescription.HideName": "Hides your name",
+  "CommandDescription.Level": "Changes your level",
+  "CommandDescription.Now": "View the current settings",
+  "CommandDescription.Disconnect": "Get rid of all players in the specified team",
+  "CommandDescription.R": "View the list of roles or the description of a specific role",
+  "CommandDescription.Up": "[DEPRECATED] Use /setrole instead",
+  "CommandDescription.SetRole": "Set a player's role for the next game",
+  "CommandDescription.Help": "View the list of commands",
+  "CommandDescription.KCount": "View the number of remaining impostors and neutral killers",
+  "CommandDescription.AddMod": "Makes the specified player a moderator",
+  "CommandDescription.DeleteMod": "Removes the specified player from the list of moderators",
+  "CommandDescription.Combo": "Set roles and add-ons that always or never spawn together",
+  "CommandDescription.Effect": "Apply a Randomizer effect to yourself",
+  "CommandDescription.AFKExempt": "Exempt a player from being checked by the AFK detector",
+  "CommandDescription.MyRole": "View the description and settings of your role",
+  "CommandDescription.TPOut": "Teleport out of the lobby",
+  "CommandDescription.TPIn": "Teleport into the lobby",
+  "CommandDescription.Template": "Send a message template (from template.txt)",
+  "CommandDescription.MessageWait": "Set the buffer time for system messages",
+  "CommandDescription.Death": "View who killed you and their role",
+  "CommandDescription.Say": "Send a message as the host",
+  "CommandDescription.Vote": "Vote for a player",
+  "CommandDescription.Ask": "Ask a question as the Mathematician",
+  "CommandDescription.Answer": "Answer a math question asked by the Mathematician",
+  "CommandDescription.QA": "Answer a question asked by the Quiz Master",
+  "CommandDescription.QS": "View the current question asked by the Quiz Master",
+  "CommandDescription.Target": "Target a player as the Ventriloquist",
+  "CommandDescription.Chat": "Make your target send a message as the Ventriloquist",
+  "CommandDescription.Check": "Check if a player has that role as the Inquirer",
+  "CommandDescription.Ban": "Bans or kicks a player from the lobby",
+  "CommandDescription.Exe": "Executes a player",
+  "CommandDescription.Kill": "Kills a player",
+  "CommandDescription.Colour": "Sets your skin color",
+  "CommandDescription.XF": "Resets the names of all players",
+  "CommandDescription.ID": "View the IDs of all players",
+  "CommandDescription.ChangeRole": "Changes your role",
+  "CommandDescription.End": "Ends the game",
+  "CommandDescription.CosID": "View your cosmetics",
+  "CommandDescription.MTHY": "Calls a meeting or ends the current meeting",
+  "CommandDescription.CSD": "Plays a custom sound",
+  "CommandDescription.SD": "Plays a sound from the game",
+  "CommandDescription.GNO": "Guess The Number mini-game",
+  "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
+  "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
+  "CommandArgs.Rename.Name": "Your new name",
+  "CommandArgs.Level.Level": "Your new level",
+  "CommandArgs.Disconnect.Team": "The team to get rid of (imp/crew)",
+  "CommandArgs.R.Role": "The role to view (leave blank to view all roles)",
+  "CommandArgs.Up.Role": "The role to set",
+  "CommandArgs.SetRole.Id": "The player's ID whose role you want to set",
+  "CommandArgs.SetRole.Role": "The role to set",
+  "CommandArgs.AddMod.Id": "The player's ID to make a moderator",
+  "CommandArgs.DeleteMod.Id": "The player's ID to remove from the list of moderators",
+  "CommandArgs.Combo.Mode": "add/ban/remove/allow (leave blank to view all combos)",
+  "CommandArgs.Combo.Role": "The name of the main role in 1 word",
+  "CommandArgs.Combo.Addon": "The name of the add-on in 1 word",
+  "CommandArgs.Combo.All": "Whether to apply to all presets (all/[blank])",
+  "CommandArgs.Effect.Effect": "The name of the effect to apply",
+  "CommandArgs.AFKExempt.Id": "The player's ID to exempt from AFK detection",
+  "CommandArgs.Template.Tag": "The tag of the template to send",
+  "CommandArgs.MessageWait.Duration": "The duration in seconds",
+  "CommandArgs.Say.Message": "The message to send",
+  "CommandArgs.Vote.Id": "The player's ID to vote for",
+  "CommandArgs.Ask.Number1": "The first number in the question",
+  "CommandArgs.Ask.Number2": "The second number in the question",
+  "CommandArgs.Answer.Number": "The answer to the question",
+  "CommandArgs.QA.Letter": "The letter of the answer (A/B/C)",
+  "CommandArgs.Target.Id": "The player's ID to target",
+  "CommandArgs.Chat.Message": "The message to make your target send",
+  "CommandArgs.Check.Id": "The player's ID to check",
+  "CommandArgs.Check.Role": "The role or add-on to check for",
+  "CommandArgs.Ban.Id": "The player's ID to ban or kick",
+  "CommandArgs.Exe.Id": "The player's ID to execute",
+  "CommandArgs.Kill.Id": "The player's ID to kill",
+  "CommandArgs.Colour.Color": "The color to set (ex. red, blue, yellow)",
+  "CommandArgs.SD.Sound": "The sound to play",
+  "CommandArgs.GNO.Number": "The number to guess",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
   "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
